<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <!---  <PreferenceCategory app:title="@string/pref_gebruiker_header"> -->
        <EditTextPreference
            android:defaultValue="@string/pref_gewicht_default"
            android:key="@string/pref_gewicht_key"
            android:title="@string/pref_gewicht_title"
            app:useSimpleSummaryProvider="true"
            android:singleLine="true"
            />

        <ListPreference
            app:defaultValue="@string/pref_geslacht_default_value"
            app:entries="@array/pref_geslacht_labels"
            app:entryValues="@array/pref_geslacht_values"
            app:key="@string/pref_geslacht_key"
            app:title="@string/pref_geslacht_title"
            app:useSimpleSummaryProvider="true"/>

</PreferenceScreen>
